[metadata]
name = torst
version = 0.0.5
author = John Reynolds
author_email = reynoldsjohngreg@gmail.com
description = Convert various data formats to reStructuredText tables.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrey999/toRST
project_urls =
    Bug Tracker = https://github.com/jrey999/toRST/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    torst = toRST.write:torst

[options.packages.find]
exclude = 
    tests*
    sampledata*
    .github*
    venv*
